# scrap-logger

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
scrap_logger/handlers/: __init__.py  dated_file_handler.py
tests/handlers/: test_dated_file_handler.py
