[metadata]
name = scrap-logger
version = 0.1
description = A collection of useful stuff related to logging.
long_description = file: README.rst
url = https://www.example.com/
author = Adam Torres
author_email = adamprogrammer@gmail.com
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    tzdata >= 2023.3
